--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>***REMOVED***-iot-rboot-base</name>
+	<name>coogle-iot-rboot-base</name>
 	<comment></comment>
 	<projects>
 	</projects>
